upload data-data pkk (selesai)